removed unecessary echos

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,42 +39,26 @@ jobs:
             echo "$QUAYIO_PASSWORD" | docker login -u "$QUAYIO_USER" --password-stdin quay.io
             docker build -t $IMAGE_NAME:$CLEAN_BRANCH .
             echo 'Verify program(s) from this repo'
-            echo 'dsa'
+            set -x
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH dsa -h
-            echo 'variantcaller'
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH variantcaller -h
-            echo 'bamaddreadbundles'
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH bamaddreadbundles -h
-            echo 'gridsearch'
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH gridsearch -h
-            echo 'randomreadinbundle'
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH randomreadinbundle -h
-            echo 'statistics'
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH statistics -h
-            echo 'gridsearch_merge.py'
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH gridsearch_merge.py -h
-            echo 'variantcaller_merge.py'
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH variantcaller_merge.py -h
-            echo 'bamcov'
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH bamcov -h
-            echo 'efficiency_nanoseq.pl'
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH efficiency_nanoseq.pl -v
-            echo 'efficiency_nanoseq.R'
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH efficiency_nanoseq.R
-            echo 'extract_tags.py'
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH extract_tags.py -h
-            echo 'indelCaller_step1.pl '
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH indelCaller_step1.pl -v
-            echo 'indelCaller_step2.pl '
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH indelCaller_step2.pl -v
-            echo 'indelCaller_step3.R '
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH indelCaller_step3.R
-            echo 'nanoseq_results_plotter.R'
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH nanoseq_results_plotter.R
-            echo 'variantcaller.R'
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH variantcaller.R
-            echo 'runNanoSeq.py'
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH runNanoSeq.py -h
+            set +x
             if [ "$CIRCLE_TAG" = "$BRANCH_OR_TAG" ]; then
               echo 'Pushing image'
               docker push $IMAGE_NAME:$CLEAN_BRANCH
