fixed circle CI to use -h instead of -v flag for perl scripts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,11 +49,11 @@ jobs:
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH gridsearch_merge.py -h
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH variantcaller_merge.py -h
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH bamcov -h
-            docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH efficiency_nanoseq.pl -v
+            docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH efficiency_nanoseq.pl -h
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH efficiency_nanoseq.R
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH extract_tags.py -h
-            docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH indelCaller_step1.pl -v
-            docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH indelCaller_step2.pl -v
+            docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH indelCaller_step1.pl -h
+            docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH indelCaller_step2.pl -h
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH indelCaller_step3.R
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH nanoseq_results_plotter.R
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH variantcaller.R
