--- a/nextflow.config
+++ b/nextflow.config
@@ -12,5 +12,6 @@ profiles {
     singularity.cacheDir = "$PWD"
     process.executor = 'lsf'
     executor.perJobMemLimit = true
+    executor.queueSize = 200
   }
 }
