--- a/nextflow.config
+++ b/nextflow.config
@@ -4,6 +4,8 @@ profiles {
     singularity.enabled = true
     singularity.cacheDir = "$PWD"
     singularity.autoMounts = true
+    process.cache = 'lenient'
+    process.beforeScript = 'module load singularity'
   }
   lsf_singularity {
     process.container = 'docker://quay.io/wtsicgp/nanoseq:2.3.3'
@@ -13,5 +15,8 @@ profiles {
     process.executor = 'lsf'
     executor.perJobMemLimit = true
     executor.queueSize = 200
+    process.cache = 'lenient' //necesary for lustre
+    process.beforeScript = 'module load singularity'
+    process.clusterOptions = '-R "order[!slots]"' //try to spread jobs
   }
 }
