fixed error with script name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH indelCaller_step3.R
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH nanoseq_results_plotter.R
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH variantcaller.R
-            docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH snv_merge_and_vaf_calc.
+            docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH snv_merge_and_vaf_calc.R
             docker run -t --rm $IMAGE_NAME:$CLEAN_BRANCH runNanoSeq.py -h
             set +x
             if [ "$CIRCLE_TAG" = "$BRANCH_OR_TAG" ]; then
