dont run CI on all branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,5 +79,7 @@ workflows:
           requires :
             - license_chk
           filters:
+            branches:
+              ignore: /.+/
             tags:
               only: /.+/
