conversion of all BAM files to CRAM

--- a/Nextflow/nextflow.config
+++ b/Nextflow/nextflow.config
@@ -3,6 +3,7 @@ profiles {
     singularity.enabled = true
     singularity.autoMounts = true
     singularity.cacheDir = "$PWD"
+    singularity.envWhitelist = "REF_PATH,REF_CACHE"
     process.executor = 'lsf'
     process.queue = 'normal'
     executor.perJobMemLimit = true
@@ -11,5 +12,6 @@ profiles {
     process.errorStrategy = 'retry' //relaunch jobs upon failure
     process.maxRetries = 2
     process.beforeScript = 'module load singularity/3.9.0'
+    env.REF_PATH = "/path/to/cram_cache/%2s/%2s/%s" //required for CRAM
   }
 }
