--- a/Nextflow/nextflow.config
+++ b/Nextflow/nextflow.config
@@ -1,17 +1,28 @@
 profiles {
   lsf_singularity {
     singularity.enabled = true
-    singularity.autoMounts = true
+    singularity.runOptions = "-B /lustre -B /software" //necesary to see /lustre in containers
     singularity.cacheDir = "$PWD"
-    singularity.envWhitelist = "REF_PATH,REF_CACHE"
+    singularity.envWhitelist = "REF_PATH" //required by  CRAM
     process.executor = 'lsf'
     process.queue = 'normal'
     executor.perJobMemLimit = true
     executor.queueSize = 200
-    process.cache = 'lenient' //necesary for lustre
+    process.cache = 'lenient' //necesary for restart in lustre
     process.errorStrategy = 'retry' //relaunch jobs upon failure
-    process.maxRetries = 2
-    process.beforeScript = 'module load singularity/3.9.0'
-    env.REF_PATH = "/path/to/cram_cache/%2s/%2s/%s" //required for CRAM
+    process.maxRetries = 3
+    env.REF_CACHE = "/lustre/scratch118/core/sciops_repository/cram_cache/%2s/%2s/%s" //required for CRAM
+    env.REF_PATH = "/lustre/scratch118/core/sciops_repository/cram_cache/%2s/%2s/%s:/lustre/scratch117/core/sciops_repository/cram_cache/%2s/%2s/%s" //required for CRAM
+  }
+  lsf {
+    process.executor = 'lsf'
+    process.queue = 'normal'
+    executor.perJobMemLimit = true
+    executor.queueSize = 200
+    process.cache = 'lenient' //necesary for restart in lustre
+    process.errorStrategy = 'retry' //relaunch jobs upon failure
+    process.maxRetries = 3
+    env.REF_CACHE = "/lustre/scratch118/core/sciops_repository/cram_cache/%2s/%2s/%s" //required for CRAM
+    env.REF_PATH = "/lustre/scratch118/core/sciops_repository/cram_cache/%2s/%2s/%s:/lustre/scratch117/core/sciops_repository/cram_cache/%2s/%2s/%s" //required for CRAM
   }
 }
