--- a/Nextflow/nextflow.config
+++ b/Nextflow/nextflow.config
@@ -1,17 +1,33 @@
 profiles {
   lsf_singularity {
     singularity.enabled = true
-    singularity.autoMounts = true
     singularity.cacheDir = "$PWD"
-    singularity.envWhitelist = "REF_PATH,REF_CACHE"
+    singularity.envWhitelist = "REF_PATH" //required by  CRAM
     process.executor = 'lsf'
-    process.queue = 'normal'
+    process.queue = 'long'
     executor.perJobMemLimit = true
-    executor.queueSize = 200
-    process.cache = 'lenient' //necesary for lustre
+    executor.queueSize = 2000
+    process.cache = 'lenient' //necesary for restart in lustre
     process.errorStrategy = 'retry' //relaunch jobs upon failure
-    process.maxRetries = 2
-    process.beforeScript = 'module load singularity/3.9.0'
-    env.REF_PATH = "/path/to/cram_cache/%2s/%2s/%s" //required for CRAM
+    process.maxRetries = 3
+    process.beforeScript = 'module load singularity'
+    env.REF_CACHE = "/lustre/scratch126/core/sciops_repository/cram_cache/%2s/%2s/%s" //required for CRAM
+    env.REF_PATH = "/lustre/scratch125/core/sciops_repository/cram_cache/%2s/%2s/%s:/lustre/scratch126/core/sciops_repository/cram_cache/%2s/%2s/%s:URL=http:://refcache.dnapipelines.sanger.ac.uk::8000/%s" //required for CRAM
+  }
+  lsf {
+    params.nanoseq_image = ""  //turn off singularity for nanoseq
+    singularity.enabled = true
+    singularity.runOptions = "-B /lustre -B /software" //necesary to see /lustre in containers
+    singularity.cacheDir = "$PWD"
+    singularity.envWhitelist = "REF_PATH" //required by  CRAM
+    process.executor = 'lsf'
+    process.queue = 'long'
+    executor.perJobMemLimit = true
+    executor.queueSize = 2000
+    process.cache = 'lenient' //necesary for restart in lustre
+    process.errorStrategy = 'retry' //relaunch jobs upon failure
+    process.maxRetries = 3
+    env.REF_CACHE = "/lustre/scratch126/core/sciops_repository/cram_cache/%2s/%2s/%s" //required for CRAM
+    env.REF_PATH = "/lustre/scratch125/core/sciops_repository/cram_cache/%2s/%2s/%s:/lustre/scratch126/core/sciops_repository/cram_cache/%2s/%2s/%s:URL=http:://refcache.dnapipelines.sanger.ac.uk::8000/%s" //required for CRAM
   }
 }
